# flappy-bird

./: .clang-format  CMakeLists.txt
modules/clock/: clock.cpp  clock.h
modules/collision/: aabb.cpp  aabb.h
modules/resource/: CMakeLists.txt  sound.cpp  texture.cpp  texture.h
modules/savefile/: savefile.cpp  savefile.h
src/: constants.h  entities.cpp  entities.h  game.cpp  game.h  main.cpp
